--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -293,7 +293,7 @@ form button:hover {
 }
 
 
-/* Panel admin */
+/* Panel adminstrador */
 .admin-card {
   position: relative;
   padding-bottom: 40px;
